methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:30: error: ')' expected but ';' found.
droite();avance();gauche();recule(8);droite();avance(3);gauche()
        ^FlowerCase:31: error: ';' expected but ')' found.
      ligne()) 
             ^